--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "openai": "^4.54.0",
     "react": "^18",
     "react-dom": "^18",
-    "uuid": "^10.0.0"
+    "uuid": "^10.0.0",
+    "heic2any": "^0.5.0"
   },
   "devDependencies": {
     "@types/node": "^20",
