--- a/package.json
+++ b/package.json
@@ -14,12 +14,13 @@
     "@fortawesome/react-fontawesome": "^0.2.2",
     "@supabase/supabase-js": "^2.45.0",
     "dotenv": "^16.4.5",
+    "heic2any": "^0.0.4",
     "next": "14.2.5",
+    "next-cors": "^1.0.0",
     "openai": "^4.54.0",
     "react": "^18",
     "react-dom": "^18",
-    "uuid": "^10.0.0",
-    "heic2any": "^0.0.4"
+    "uuid": "^10.0.0"
   },
   "devDependencies": {
     "@types/node": "^20",
