--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "calo-tracker",
   "version": "0.1.0",
   "private": true,
+  "type": "module",
   "scripts": {
     "dev": "next dev",
     "build": "next build",
@@ -13,24 +14,31 @@
     "@fortawesome/free-solid-svg-icons": "^6.6.0",
     "@fortawesome/react-fontawesome": "^0.2.2",
     "@supabase/supabase-js": "^2.45.0",
+    "chart.js": "^4.4.3",
     "dotenv": "^16.4.5",
     "heic2any": "^0.0.4",
     "next": "14.2.5",
     "next-cors": "^1.0.0",
     "openai": "^4.54.0",
     "react": "^18",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18",
-    "uuid": "^10.0.0"
+    "react-icons": "^5.3.0",
+    "react-transition-group": "^4.4.5",
+    "uuid": "^10.0.0",
+    "zustand": "^4.5.4"
   },
   "devDependencies": {
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@types/react-transition-group": "^4.4.11",
     "@types/uuid": "^10.0.0",
     "eslint": "^8",
     "eslint-config-next": "14.2.5",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
-    "typescript": "^5"
+    "typescript": "^5",
+    "ts-node": "^10.0.0"
   }
 }
