--- a/package.json
+++ b/package.json
@@ -11,15 +11,21 @@
   },
   "dependencies": {
     "@amplitude/analytics-browser": "^2.11.0",
+    "@analytics/amplitude": "^0.1.3",
+    "@analytics/core": "^0.12.15",
+    "@analytics/google-analytics": "^1.0.7",
+    "@analytics/mixpanel": "^0.4.0",
     "@fortawesome/fontawesome-svg-core": "^6.6.0",
     "@fortawesome/free-solid-svg-icons": "^6.6.0",
     "@fortawesome/react-fontawesome": "^0.2.2",
     "@next/third-parties": "^14.2.5",
     "@supabase/auth-helpers-react": "^0.5.0",
     "@supabase/supabase-js": "^2.45.0",
+    "analytics": "^0.8.14",
     "chart.js": "^4.4.3",
     "dotenv": "^16.4.5",
     "heic2any": "^0.0.4",
+    "mixpanel-browser": "^2.55.0",
     "next": "14.2.5",
     "next-cors": "^1.0.0",
     "openai": "^4.54.0",
@@ -33,6 +39,7 @@
     "zustand": "^4.5.4"
   },
   "devDependencies": {
+    "@types/mixpanel-browser": "^2.49.1",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
